# linux-spi-display

./: CMakeLists.txt  Makefile  README.md  Readme.txt  displ_add_line_ctrl.cpp  displ_add_line_ctrl.h  main.cpp  spi_bus.cpp  spi_bus.h  tft.cpp  tft.h
src/: main.cpp
src/linux_tft/: add_pins.cpp  add_pins.h  setup.h  spi.cpp  spi.h  st7789.cpp  st7796.cpp  tft.cpp  tft.h  thread_helper.h
